infer/tests/codetoanalyze/objc/errors/frontend/dispatch_in_macro.m
../../frontend/block/dispatch_in_macro.m